# GLTests_45

./: .gitignore  CMakeLists.txt
dat/: test.frag  test.vert  test2.frag
headers/: common.h  defs.h  logger.h  main.h  shader_manager.h  util.h
src/: logger.c  main.c  shader_manager.c  util.c
